Add a 'tail' mode to allow you to run the analyzer against a live JVM GC log and have events sent into Solr in real-time